[package]
name = "rcel"
version = "0.1.0"
authors = ["Kyle Ruzic <kyruzic@gmail.com>", "Kristopher Ruzic <krruzic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.1"
termion = "1.5.3"
tui = { git = "https://github.com/kyruzic/tui-rs" }
cassowary = "0.3.0"
